# Sprig-terminal-LLM

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: button.rs  json.rs  keyboard.rs  layout.rs  lib.rs  predict.rs  provider.rs  sse.rs
docs/specs/: 2026-06-06-pocket-llm-terminal-design.md
firmware/: Cargo.toml  README.md  build.rs  memory.x
firmware/.cargo/: config.toml
firmware/assets/: words.txt
firmware/src/: audio.rs  config.example.rs  dict_data.rs  display.rs  input.rs  main.rs  net.rs  pins.rs  storage.rs  usb.rs
tools/dict-builder/: Cargo.toml  README.md  sample-words.txt
tools/dict-builder/src/: main.rs
