[workspace]
resolver = "2"
members = ["crates/core", "tools/dict-builder"]

# `firmware/` is intentionally NOT a member: it builds only for the device
# target (thumbv6m-none-eabi) and is its own workspace, so a host-side
# `cargo test` here never tries to compile it. Build it from the firmware/ dir.
